Fix dependencies and small refactorings